src/objects/AMS_Voucher_Information__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria. (Account must be an Head Office)</errorMessage>
            <filterItems>
                <field>Account.Location_Type__c</field>
                <operation>equals</operation>
                <value>HO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vouchers Information</relationshipLabel>
        <relationshipName>Vouchers_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AmountLastYearSales__c</fullName>
        <label>Amount Last Year (Sales)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Currency__c</fullName>
        <label>Amount Currency</label>
        <picklist>
            <picklistValues>
                <fullName>ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HRK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DKK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MKD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsAgencyEligibleForCountryAverage__c</fullName>
        <formula>YEAR(Account__r.Accreditation_date__c ) &lt; (YEAR(TODAY()) - 1) 
&amp;&amp; 
IsAgencyEligible__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is agency eligible for country average</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsAgencyEligible__c</fullName>
        <formula>YEAR(Account__r.Accreditation_date__c ) &lt;= (YEAR(TODAY()) -1) 
&amp;&amp; 
NOT(ISPICKVAL(Account__r.Status__c ,&quot;Terminated&quot;)) 
&amp;&amp; 
NOT(ISBLANK(AmountLastYearSales__c) || AmountLastYearSales__c == 0) 
&amp;&amp; 
(ISPICKVAL(Account__r.Location_Class__c ,&quot;C&quot;)) 
&amp;&amp; 
NOT(ISBLANK(Account__r.IATA_ISO_Country__r.AMS_Max_Vouchers_Per_Year__c)) 
&amp;&amp; 
NOT(ISBLANK(Account__r.IATA_ISO_Country__r.AMS_Vouchers_Benchmark__c)) 
&amp;&amp; 
ISPICKVAL(Account__r.Location_Type__c ,&quot;HO&quot;)</formula>
        <inlineHelpText>An non eligible Voucher Information:

Sales of that year not found
Agency approval date is after that year
Default status 5, any reason or Default status 6, reasons 61, 62, 68
Submitted international sales of that year is zero or nil</inlineHelpText>
        <label>Is agency eligible to print vouchers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Of_Vouchers__c</fullName>
        <description>Total Number Of Vouchers</description>
        <inlineHelpText>Total Number Of Vouchers</inlineHelpText>
        <label>Number Of Vouchers</label>
        <summaryForeignKey>AMS_Voucher__c.Voucher_Information__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Vouchers_Issued_Last_Year__c</fullName>
        <label>Vouchers Issued Last Year</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Current Year</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Voucher Information</label>
    <nameField>
        <displayFormat>VI-{000000000}</displayFormat>
        <label>Voucher information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vouchers Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AccountMustBeHO</fullName>
        <active>true</active>
        <description>Only head offices can have a record for Voucher information.</description>
        <errorConditionFormula>NOT(ISPICKVAL(Account__r.Location_Type__c ,&quot;HO&quot;))</errorConditionFormula>
        <errorMessage>Only head offices can have a record for Voucher information.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ensure_year_correct_input_value</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
NOT(ISBLANK ( Year__c ) )
&amp;&amp; 
ISNUMBER ( Year__c )
&amp;&amp;
LEN ( Year__c ) =  4
&amp;&amp;
 ( BEGINS(Year__c , &apos;19&apos;) || BEGINS(Year__c , &apos;20&apos;))
)</errorConditionFormula>
        <errorDisplayField>Year__c</errorDisplayField>
        <errorMessage>Please check the Year format YYYY (&gt; 1900)</errorMessage>
    </validationRules>
</CustomObject>